--- a/frontend/index aws.html
+++ b/frontend/index aws.html
@@ -84,7 +84,7 @@
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
 
-            const response = await fetch('http://localhost:9090/signup', {
+            const response = await fetch('http://ec2-3-84-156-177.compute-1.amazonaws.com:9090/signup', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -108,7 +108,7 @@
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
 
-            const response = await fetch('http://localhost:9090/login', {
+            const response = await fetch('http://ec2-3-84-156-177.compute-1.amazonaws.com:9090/login', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -138,7 +138,7 @@
             }
 
             // Set up the video player
-            const url = 'http://localhost:9090/video.mpd';
+            const url = 'http://ec2-3-84-156-177.compute-1.amazonaws.com:9090/video.mpd';
             const player = dashjs.MediaPlayer().create();
             player.extend("RequestModifier", function () {
                 return {
@@ -169,7 +169,7 @@
             const formData = new FormData();
             formData.append('file', videoFile);
 
-            const response = await fetch('http://localhost:9090/upload', {
+            const response = await fetch('http://ec2-3-84-156-177.compute-1.amazonaws.com:9090/upload', {
                 method: 'POST',
                 headers: {
                     'Authorization': localStorage.getItem('jwtToken')
